Moved search screen route to the navigation bar routes list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="photos">Photos</string>
     <string name="collections">Collections</string>
     <string name="topics">Topics</string>
+    <string name="search">Search</string>
     <string name="profile">Profile</string>
 
 </resources>
