--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,9 +93,12 @@
     <string name="login_successful">Login successful</string>
     <string name="login_failed">Login failed</string>
     <string name="user_full_name_with_nickname_formatted" translatable="false">%s %s (%s)</string>
+    <string name="login_screen_slogan_p1" translatable="false">Capture love, joy and</string>
+    <string name="login_screen_slogan_p2" translatable="false">everything in between</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="action_yes">Yes</string>
     <string name="action_no">No</string>
+    <string name="login_screen_image_asset_url">file:///android_asset/login_screen_bg.jpg</string>
 
     <!--Time-->
     <string name="just_now">just now</string>
