--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,7 +210,8 @@
     <string name="load_settings">Load settings</string>
     <string name="photos_layout">Photos layout</string>
     <string name="collections_layout">Collections layout</string>
-    <string name="lists_grids_photo_quality">Lists and grids photo quality</string>
+    <string name="photo_load_quality">Photo load quality</string>
+    <string name="photo_download_quality">Photo download quality</string>
     <string name="type_default">Default</string>
     <string name="type_minimal_list">Minimal list</string>
     <string name="type_staggered_grid">Staggered grid</string>
