Updated SearchScreen by replacing custom search bar with material3 SearchBar component. SearchBar is now showing recent searches.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="filter_color_blue">Blue</string>
     <string name="order">Order</string>
     <string name="clear_search_field">Clear search field</string>
+    <string name="recent_searches">Recent searches:</string>
+    <string name="clear_recent_searches">Clear all</string>
 
     <!--Authorization-->
     <string name="add_account">Add an account</string>
