--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="recent_searches">Recent searches:</string>
     <string name="clear_recent_searches">Clear all</string>
 
-    <!--Authorization-->
+    <!--Login-->
     <string name="add_account">Add an account</string>
     <string name="user_authorization_title">Authorization</string>
     <string name="join">Join</string>
@@ -97,8 +97,9 @@
     <string name="login_successful">Login successful</string>
     <string name="login_failed">Login failed</string>
     <string name="user_full_name_with_nickname_formatted" translatable="false">%s %s (%s)</string>
-    <string name="login_screen_slogan_p1" translatable="false">Capture love, joy and</string>
-    <string name="login_screen_slogan_p2" translatable="false">everything in between</string>
+    <string name="login_screen_greetings_text">Hey there!</string>
+    <string name="login_screen_slogan_p1" translatable="false">Compel your audience.\u0020</string>
+    <string name="login_screen_slogan_p2" translatable="false">Capture the moment. Light with purpose.</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="action_yes">Yes</string>
     <string name="action_no">No</string>
