Update dependencies and use adaptive navigation suite. Added navigation bar icon content description. Cleaned up Navigation extensions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--Common-->
     <string name="to_top">To top</string>
     <string name="navigate_back">Navigate back</string>
+    <string name="navigation_bar_icon">Navigation bar icon</string>
 
     <string name="photo_quality_raw">Raw</string>
     <string name="photo_quality_high">High</string>
