Refactored SearchScreen to Material 3 Expressive look and feel.
Fixed a bug prevented app icon to appear in launcher menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,8 @@
     <string name="filter_color_teal">Teal</string>
     <string name="filter_color_blue">Blue</string>
     <string name="order">Order</string>
-    <string name="recent_searches">Recent searches:</string>
+    <string name="search_history">Search history:</string>
+    <string name="search_history_empty_text">Your search history will appear here</string>
     <string name="clear_recent_searches">Clear all</string>
 
     <!--Login-->
